2011-05-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/ds390/spec.mk,
	* support/regression/ports/gbz80/spec.mk,
	* support/regression/ports/hc08/spec.mk,
	* support/regression/ports/host/spec.mk.in,
	* support/regression/ports/mcs51-common/spec.mk,
	* support/regression/ports/ucz80/spec.mk,
	* support/regression/ports/z80/spec.mk: second try to fix include path spec.mk
	* support/regression/tests/inline.c(inlined_function): fixed for host

2011-05-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCbitv.h,
	  src/SDCCbitv.c:
	  Use const in bitvector functions in some places, where appropriate.

2011-05-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/ds390/spec.mk,
	* support/regression/ports/gbz80/spec.mk,
	* support/regression/ports/hc08/spec.mk,
	* support/regression/ports/host/spec.mk.in,
	* support/regression/ports/mcs51-common/spec.mk,
	* support/regression/ports/ucz80/spec.mk,
	* support/regression/ports/z80/spec.mk: hopefully fixed include path spec.mk

2011-05-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCerr.c,
	* src/SDCCerr.h,
	* src/SDCCsymt.c(checkSClass): removed E_EXTERN_INIT error, see 6.9.2-2
	* src/SDCCglue.c(emitRegularMap, emitStaticSeg): fixed extern definitions
	  (printIvalType): use ulFromVal
	* support/regression/tests/inline.c(inlined_function): added test
	* support/regression/fwk/lib/extern1.c,
	* support/regression/fwk/lib/extern2.c: new, added for inline.c test
	* support/regression/ports/ds390/fwk.lib,
	* support/regression/ports/gbz80/fwk.lib,
	* support/regression/ports/hc08/fwk.lib,
	* support/regression/ports/mcs51-common/fwk.lib,
	* support/regression/ports/ucz80/fwk.lib,
	* support/regression/ports/z80/fwk.lib,
	* support/regression/fwk/lib/fwk.lib,
	* support/regression/ports/ds390/spec.mk,
	* support/regression/ports/gbz80/spec.mk,
	* support/regression/ports/hc08/spec.mk,
	* support/regression/ports/host/spec.mk.in,