@@ -2311,6 +2311,8 @@
                  dresses,  sizes  of  linked  areas,  and  other linking
                  information.
 
+             2.a -w      Wide listing format for map file.
+
              3.  -xdq    Specifies  the  number  radix  for the map file
                  (Hexadecimal, Decimal, or Octal).
 
@@ -2402,13 +2404,13 @@
         link-hc08 (Motorola 68HC08) specific options:
         Output:
           -E   ELF executable as file[elf]
-          -j    Produce NoICE debug as file[NOI]
+          -j   Produce NoICE debug as file[NOI]
           -y   Produce SDCdb debug as file[cdb]
-          -u    Update listing file(s) with link data as file(s)[.RST]
+          -u   Update listing file(s) with link data as file(s)[.RST]
         Miscellaneous:
-          -I    [iram-size] Check for internal RAM overflow
-          -X    [xram-size] Check for external RAM overflow
-          -C    [code-size] Check for code overflow
+          -I   [iram-size] Check for internal RAM overflow
+          -X   [xram-size] Check for external RAM overflow
+          -C   [code-size] Check for code overflow
 
 
 
